# dbus-parsec

./: Cargo.toml  README.md  build.rs  createcredential.py  dbus-parsec.conf  dbus-parsec.service  dbus-parsec.systemd.service
src/: com.github.puiterwijk.DBusPARSEC.control.xml  crypto.rs  daemon.rs  main.rs  utility.rs  utils.rs
src/agent/: control.rs  mod.rs  networkmanager.rs
