[package]
name = "dbus-parsec"
version = "0.4.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

[[bin]]
name = "dbus-parsec"
path = "src/daemon.rs"

[[bin]]
name = "dbus-parsec-control"
path = "src/utility.rs"

[dependencies]
dbus = "0.8.4"
parsec-client = "0.16.0"
anyhow = "1.0.32"
openssl = "0.10"
hex = "0.4.0"

[build-dependencies]
dbus-codegen = "0.5.0"
